Approval configuration and plant configuration changes

--- a/Vlims.Administration/Vlims.Administration.csproj
+++ b/Vlims.Administration/Vlims.Administration.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Vlims.Administration.Entities\Vlims.Administration.Entities.csproj" />
     <ProjectReference Include="..\Vlims.Administration.Manager\Vlims.Administration.Manager.csproj" />
   </ItemGroup>
 
