--- a/VlimsApp/ClientApp/package.json
+++ b/VlimsApp/ClientApp/package.json
@@ -24,7 +24,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
-    "ngx-bootstrap": "^10.2.0",
+    "ngx-bootstrap": "^11.0.2",
+    "ngx-spinner": "^16.0.2",
     "primeng": "^16.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
