Updating publish profile

--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,7 @@ FodyWeavers.xsd
 /VlimsWeb/ClientApp/src/app/Services/login.service.spec.ts
 /Vlims.DocumentManager/Uploads/fd2ba598-95d1-4eb3-b45d-631b132a25f2_headerfooter.docx
 /Vlims.DocumentManager/Uploads/f2a682e0-d5a3-4c70-9729-a3a122e52462_headerfooter.docx
+/Vlims.Administration/.config/dotnet-tools.json
+/Vlims.Administration/Properties/ServiceDependencies/Dlimsadmin - Web Deploy/profile.arm.json
+/Vlims.Administration/Properties/ServiceDependencies/Dlimsadmin - Zip Deploy/profile.arm.json
+/Vlims.Administration/Properties/ServiceDependencies/DMSAdmin1 - Zip Deploy/profile.arm.json
