--- a/VlimsApp/ClientApp/package.json
+++ b/VlimsApp/ClientApp/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
+    "force": "^0.0.3",
     "ngx-bootstrap": "^11.0.2",
     "ngx-spinner": "^16.0.2",
     "primeng": "^16.0.1",
