--- a/VlimsApp/ClientApp/src/assets/serverconfig.json
+++ b/VlimsApp/ClientApp/src/assets/serverconfig.json
@@ -1,6 +1,6 @@
 {
   "BaseUrl": "https://localhost:7151/",
-  "documentmasterUrl": "https://vlimsdocmaster.azurewebsites.net/",
+  "documentmasterUrl": "https://localhost:7157/",
   "documentmanagerUrl": "https://vlimsdocmanager.azurewebsites.net/",
   "adminUrl": "https://dmsadmin1.azurewebsites.net/"
 }
