--- a/VlimsApp/ClientApp/package.json
+++ b/VlimsApp/ClientApp/package.json
@@ -27,6 +27,7 @@
     "force": "^0.0.3",
     "ngx-bootstrap": "^11.0.2",
     "ngx-spinner": "^16.0.2",
+    "ngx-toastr": "^17.0.2",
     "primeng": "^16.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
