--- a/Vlims.DocumentMaster/Vlims.DocumentMaster.csproj
+++ b/Vlims.DocumentMaster/Vlims.DocumentMaster.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net7.0-windows10.0.22621.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>c23e892a-914e-4a06-b5da-053a058e303b</UserSecretsId>
