--- a/Vlims.DocumentManager.Manager/Vlims.DocumentManager.Manager.csproj
+++ b/Vlims.DocumentManager.Manager/Vlims.DocumentManager.Manager.csproj
@@ -7,9 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Vlims.Administration.Entities\Vlims.Administration.Entities.csproj" />
     <ProjectReference Include="..\Vlims.Common\Vlims.Common.csproj" />
     <ProjectReference Include="..\Vlims.DocumentManager.DataAccess\Vlims.DocumentManager.DataAccess.csproj" />
     <ProjectReference Include="..\Vlims.DocumentManager.Entities\Vlims.DocumentManager.Entities.csproj" />
+    <ProjectReference Include="..\Vlims.DocumentMaster.Entities\Vlims.DocumentMaster.Entities.csproj" />
+    <ProjectReference Include="..\Vlims.DocumentMaster.Manager\Vlims.DocumentMaster.Manager.csproj" />
   </ItemGroup>
 
 </Project>
