--- a/.gitignore
+++ b/.gitignore
@@ -369,3 +369,14 @@ FodyWeavers.xsd
 /Vlims.Administration/Properties/ServiceDependencies/Dlimsadmin - Zip Deploy/profile.arm.json
 /Vlims.Administration/Properties/ServiceDependencies/DMSAdmin1 - Zip Deploy/profile.arm.json
 /Vlims.DocumentManager/Uploads/Testdoc.docx
+/Vlims.Administration.DataAccess/Validators/AdimManagementValidator.cs.txt
+/Vlims.Administration.DataAccess/Validators/DepartmentConfigurationValidator.cs.txt
+/Vlims.Administration.DataAccess/Validators/HierarchyManagementValidator.cs.txt
+/Vlims.Administration.DataAccess/Validators/noticationconfigurationValidator.cs.txt
+/Vlims.Administration.DataAccess/Validators/PlantManagementValidator.cs.txt
+/Vlims.Administration.DataAccess/Validators/RoleConfigurationValidator.cs.txt
+/Vlims.Administration.DataAccess/Validators/SecurityManagementValidator.cs.txt
+/Vlims.Administration.DataAccess/Validators/UserConfigurationValidator.cs.txt
+/Vlims.Administration.DataAccess/Validators/UserGroupConfigurationValidator.cs.txt
+/Vlims.Administration.DataAccess/Validators/UserManagementValidator.cs.txt
+/Vlims.Administration.DataAccess/Validators/workitemsValidator.cs.txt
