--- a/Vlims.DocumentMaster/appsettings.json
+++ b/Vlims.DocumentMaster/appsettings.json
@@ -98,7 +98,7 @@
   "ConnectionStrings": {
     //"DefaultConnection": "Data Source=104.211.217.73\\MSSQLServer01,49999;Initial Catalog=IFAutoApproveDB;User ID=serdadmin;Password=Passw0rd@123;Pooling=true;Min Pool Size=0;Max Pool Size=1024",
     //"DefaultConnection": "Data Source=ifoundry-qa.database.windows.net;Initial Catalog=ifoundry5-qa-db;User ID=ifoundry;Password=Passw0rd@123;Pooling=true;Min Pool Size=0;Max Pool Size=1024",
-    "DefaultConnection": "Data Source=172.173.216.235;Initial Catalog=Vlims;User ID=V25TechAdmin;Password=Producttechadmin@123;Pooling=true;Min Pool Size=0;Max Pool Size=1024;",
+    "DefaultConnection": "Data Source=172.173.216.235;Initial Catalog=VLIMSV2;User ID=V25TechAdmin;Password=Producttechadmin@123;Pooling=true;Min Pool Size=0;Max Pool Size=1024;",
     "providerName": "System.Data.SqlClient"
   },
   "LogSettings": {
