--- a/VlimsApp/ClientApp/package.json
+++ b/VlimsApp/ClientApp/package.json
@@ -26,10 +26,13 @@
     "bootstrap-icons": "^1.10.5",
     "force": "^0.0.3",
     "ngx-bootstrap": "^11.0.2",
+    "ngx-editor": "^16.0.0-beta.0",
+    "ngx-quill": "^22.0.0",
     "ngx-spinner": "^16.0.2",
     "ngx-toastr": "^17.0.2",
     "primeng": "^16.0.1",
     "rxjs": "~7.8.0",
+    "trusted-types": "^2.0.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -38,12 +41,13 @@
     "@angular/cli": "~16.0.5",
     "@angular/compiler-cli": "^16.0.0",
     "@types/jasmine": "~4.3.0",
+    "@types/quill": "^1.3.5",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~5.0.2"
+    "typescript": "^5.1.6"
   }
 }
