--- a/Vlims.DocumentManager.Manager/Vlims.DocumentManager.Manager.csproj
+++ b/Vlims.DocumentManager.Manager/Vlims.DocumentManager.Manager.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.17.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Vlims.Administration.Entities\Vlims.Administration.Entities.csproj" />
     <ProjectReference Include="..\Vlims.Common\Vlims.Common.csproj" />
     <ProjectReference Include="..\Vlims.DocumentManager.DataAccess\Vlims.DocumentManager.DataAccess.csproj" />
