--- a/VlimsApp/ClientApp/angular.json
+++ b/VlimsApp/ClientApp/angular.json
@@ -30,13 +30,21 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/summernote/dist/summernote-lite.css",
+              "node_modules/summernote/dist/summernote-lite.min.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/ngx-toastr/toastr.css" ,
               "src/styles.scss"
+             
+              
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/summernote/dist/summernote-lite.js",
+            "node_modules/summernote/dist/summernote-lite.min.js"
+            ]
           },
           "configurations": {
             "production": {
