--- a/VlimsApp/ClientApp/package.json
+++ b/VlimsApp/ClientApp/package.json
@@ -25,9 +25,14 @@
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
     "force": "^0.0.3",
+    "html2canvas": "^1.4.1",
+    "jquery": "^3.7.1",
+    "jspdf": "^2.5.1",
     "ngx-bootstrap": "^11.0.2",
     "ngx-spinner": "^16.0.2",
+    "ngx-summernote": "^1.0.0",
     "ngx-toastr": "^17.0.2",
+    "pdfmake": "^0.2.7",
     "primeng": "^16.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -39,6 +44,8 @@
     "@angular/cli": "~16.0.5",
     "@angular/compiler-cli": "^16.0.0",
     "@types/jasmine": "~4.3.0",
+    "@types/jspdf": "^2.0.0",
+    "@types/pdfmake": "^0.2.4",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
