--- a/VlimsApp/ClientApp/package.json
+++ b/VlimsApp/ClientApp/package.json
@@ -35,6 +35,7 @@
     "pdfmake": "^0.2.7",
     "primeng": "^16.0.1",
     "rxjs": "~7.8.0",
+    "summernote": "^0.8.18",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
     "zone.js": "~0.13.0"
