--- a/Vlims.DocumentMaster/Vlims.DocumentMaster.csproj
+++ b/Vlims.DocumentMaster/Vlims.DocumentMaster.csproj
@@ -17,9 +17,15 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Vlims.Common\Vlims.Common.csproj" />
+    <ProjectReference Include="..\Vlims.DocumentManager.Entities\Vlims.DocumentManager.Entities.csproj" />
+    <ProjectReference Include="..\Vlims.DocumentManager.Manager\Vlims.DocumentManager.Manager.csproj" />
     <ProjectReference Include="..\Vlims.DocumentMaster.DataAccess\Vlims.DocumentMaster.DataAccess.csproj" />
     <ProjectReference Include="..\Vlims.DocumentMaster.Entities\Vlims.DocumentMaster.Entities.csproj" />
     <ProjectReference Include="..\Vlims.DocumentMaster.Manager\Vlims.DocumentMaster.Manager.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Logo\" />
   </ItemGroup>
 
 </Project>
