--- a/Vlims.DocumentManager.DataAccess/Vlims.DocumentManager.DataAccess.csproj
+++ b/Vlims.DocumentManager.DataAccess/Vlims.DocumentManager.DataAccess.csproj
@@ -14,6 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AngleSharp" Version="1.0.4" />
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.17.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
