--- a/Vlims.DocumentManager.Entities/Vlims.DocumentManager.Entities.csproj
+++ b/Vlims.DocumentManager.Entities/Vlims.DocumentManager.Entities.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AngleSharp" Version="1.0.4" />
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.17.0" />
     <PackageReference Include="DocumentFormat.OpenXml" Version="2.20.0" />
     <PackageReference Include="ICSharpCode.SharpZipLib.dll" Version="0.85.4.369" />
     <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.2.7" />
