--- a/Vlims.DocumentManager.Manager/Vlims.DocumentManager.Manager.csproj
+++ b/Vlims.DocumentManager.Manager/Vlims.DocumentManager.Manager.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AngleSharp" Version="1.0.4" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.17.0" />
   </ItemGroup>
 
