--- a/VlimsWeb/ClientApp/src/assets/serverconfig.json
+++ b/VlimsWeb/ClientApp/src/assets/serverconfig.json
@@ -1,8 +1,8 @@
 {
   "BaseUrl": "https://localhost:7151/",
-  "documentmasterUrl": "https://vlimsdocmaster.azurewebsites.net/",
-  "documentmanagerUrl": "https://vlimsdocmanager.azurewebsites.net/",
-  "adminUrl": "https://dmsadmin1.azurewebsites.net/"
+  "documentmasterUrl": "https://dmsdocmasterv2.azurewebsites.net/",
+  "documentmanagerUrl": "https://dmsdocmanagerv2.azurewebsites.net/",
+  "adminUrl": "https://dmsadminv2.azurewebsites.net/"
 }
 
  
