--- a/VlimsApp/VlimsApp.csproj
+++ b/VlimsApp/VlimsApp.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="ClientApp\src\app\models\userpermissions.ts" />
     <None Remove="ClientApp\src\app\modules\manager\components\existing-documents\existing-documents.component.ts" />
     <None Remove="ClientApp\src\app\modules\manager\services\existing-documents.service.ts" />
   </ItemGroup>
@@ -16,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\src\app\models\userpermissions.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\modules\manager\components\existing-documents\existing-documents.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\modules\manager\services\existing-documents.service.ts" />
   </ItemGroup>
