--- a/VlimsApp/VlimsApp.csproj
+++ b/VlimsApp/VlimsApp.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="ClientApp\src\app\common\searchview\searchview.component.ts" />
+    <None Remove="ClientApp\src\app\common\tracksearch.component.ts" />
     <None Remove="ClientApp\src\app\models\userpermissions.ts" />
     <None Remove="ClientApp\src\app\modules\manager\components\existing-documents\existing-documents.component.ts" />
     <None Remove="ClientApp\src\app\modules\manager\services\existing-documents.service.ts" />
@@ -26,6 +28,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\src\app\common\searchview\searchview.component.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\common\tracksearch\tracksearch.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\models\userpermissions.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\modules\manager\components\existing-documents\existing-documents.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\modules\manager\services\existing-documents.service.ts" />
