--- a/Vlims.Administration/appsettings.json
+++ b/Vlims.Administration/appsettings.json
@@ -97,7 +97,7 @@
   },
   "ConnectionStrings": {
     //"DefaultConnection": "Data Source=104.211.217.73\\MSSQLServer01,49999;Initial Catalog=IFAutoApproveDB;User ID=serdadmin;Password=Passw0rd@123;Pooling=true;Min Pool Size=0;Max Pool Size=1024",
-    "DefaultConnection": "Data Source=tcp:vlimsserver.database.windows.net,1433;Initial Catalog=DMS_ACCORD_DEV;User ID=dmsadmin;Password=Passw0rd@123;Pooling=true;Min Pool Size=0;Max Pool Size=1024"
+    "DefaultConnection": "Data Source=tcp:vlimsserver.database.windows.net,1433;Initial Catalog=DMS_ACCORD_DEV_2024-04-10T15-46Z;User ID=dmsadmin;Password=Passw0rd@123;Pooling=true;Min Pool Size=0;Max Pool Size=1024"
     //"DefaultConnection": "Data Source=172.173.216.235;Initial Catalog=TemplateDB;User ID=V25TechAdmin;Password=Producttechadmin@123;Pooling=true;Min Pool Size=0;Max Pool Size=1024;",
     //"providerName": "System.Data.SqlClient"
   },
